--- a/especialidades.html
+++ b/especialidades.html
@@ -173,10 +173,7 @@
                   </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="sobremim.html">SOBRE MIM <span class="sr-only"></span></a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">PROJETOS <span class="sr-only"></span></a>
-                </li>
+                </li>               
                 <li class="nav-item active">
                     <a class="nav-link" href="especialidades.html">ESPECIALIDADES <span class="sr-only"></span></a>
                 </li>
@@ -205,9 +202,9 @@
                 </div>
                  </div>
                  
-                 <div class="mt-5  col-12 col-md-3 bordas">
+                 <div class="mt-5 col-12 col-md-3 bordas">
                     <div class="text-center">
-                    <img src="images/css.png">
+                    <img class="img-fluid" src="images/css.png">
                     <p class="mt-4"> CSS </p>
                 </div>
                  </div>
@@ -249,7 +246,7 @@
         <h1 class="heading"> Barra de Habilidade</h1>
         <section class="skills">
             <div class="left">
-                <img src="images/programer.png" class="img-fluid">
+                <img src="images/undraw_code_review_re_woeb.svg" class="img-fluid">
             </div>
 
             <div class="right">
